tdf#148729 sw: PDF export: fix link targets when "comments in margin"

... is enabled but there are no comments; the conditions in
SwViewShell::PrintOrPDFExport() and
SwEnhancedPDFExportHelper::SwRectToPDFRect() were out of sync.

(regression from commit c77e01d63b4bd4805c4a499e4e0cab917d0eb403)

Change-Id: I617185e6f30843a79190a54b73a5f44666697388
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154279
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit f7974dc8d6d0cca08da52c4fbdb312ed6b7d71da)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154257
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>